This will hopefully prevent caching so updates don't get ignored client-side
Added query strings to the script loading

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	}
 </style>
 
-<script src="js/input.js"></script>
-<script src="js/audio.js"></script>
-<script src="js/image.js"></script>
+<script src="js/input.js?n=1"></script>
+<script src="js/audio.js?n=1"></script>
+<script src="js/image.js?n=1"></script>
 
 </head>
 <body>
 <div id="report"></div>
 <canvas id="gc" width="320" height="320"></canvas>
-<script src="main.js"></script>
+<script src="main.js?n=1"></script>
 </body>
