Added the start of a collision lib
A bit scrappy at the moment, but something to start with

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script src="js/input.js?n=1"></script>
 <script src="js/audio.js?n=1"></script>
 <script src="js/image.js?n=1"></script>
+<script src="js/collision.js?n=1"></script>
 
 </head>
 <body>
