Added render lib
- More syntax fixes and cleanup
- Function added for resizing both the canvas and internal resolution

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	}
 </style>
 
+<script src="js/render.js?n=1"></script>
 <script src="js/input.js?n=1"></script>
 <script src="js/audio.js?n=1"></script>
 <script src="js/image.js?n=1"></script>
