--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	}
 </style>
 
+<script src="js/instance.js?n=1"></script>
 <script src="js/render.js?n=1"></script>
 <script src="js/input.js?n=1"></script>
 <script src="js/audio.js?n=1"></script>
