Added more mask properties + Math functions
- Math shorthands added
- Scale and Rotation added to collision masks
- Added some demo text to the HTML
- Tried to implement WebGL and got scared

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <meta charset="UTF-8"> 
 <head>
+<link rel="icon" href="img/favicon.png">
 <style>
+    div.info {
+        text-align: center;
+    }
+
 	canvas {
     padding-left: 0;
     padding-right: 0;
@@ -20,6 +25,7 @@
 	}
 </style>
 
+<script src="js/math.js?n=1"></script>
 <script src="js/instance.js?n=1"></script>
 <script src="js/render.js?n=1"></script>
 <script src="js/input.js?n=1"></script>
@@ -32,4 +38,9 @@
 <div id="report"></div>
 <canvas id="gc" width="320" height="320"></canvas>
 <script src="main.js?n=1"></script>
+
+<div class="info">
+    WASD to mess with box. Arrows to move around.
+</div>
+
 </body>
