--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	}
 </style>
 
+<script src="js/program.js?n=1"></script>
 <script src="js/math.js?n=1"></script>
 <script src="js/instance.js?n=1"></script>
 <script src="js/render.js?n=1"></script>
